--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@tailwindcss/vite": "^4.0.14",
+    "axios": "^1.8.4",
     "date-picker": "^0.5.0",
     "lucide-react": "^0.482.0",
     "react": "^19.0.0",
