--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@tailwindcss/vite": "^4.0.14",
+    "chart.js": "^4.4.8",
     "date-picker": "^0.5.0",
     "lucide-react": "^0.482.0",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-datepicker": "^8.2.1",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
