--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@tailwindcss/vite": "^4.0.14",
+    "axios": "^1.8.4",
     "date-picker": "^0.5.0",
     "lucide-react": "^0.482.0",
+    "multer": "^1.4.5-lts.2",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-datepicker": "^8.2.1",
