--- a/Backend/.env
+++ b/Backend/.env
@@ -1,3 +1,3 @@
-MONGO_URI=mongodb://localhost:27017/FreelancingDB
+MONGO_URI=mongodb+srv://onkar:onkar@cluster0.yir46.mongodb.net/freelaceing-webapp 
 JWT_SECRET=YourSecreteKey
 PORT = 8000
