--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,7 @@
     "@tailwindcss/vite": "^4.0.14",
     "axios": "^1.8.4",
     "date-picker": "^0.5.0",
-    "framer-motion": "^12.6.3",
+    "framer-motion": "^12.7.3",
     "lucide-react": "^0.482.0",
     "multer": "^1.4.5-lts.2",
     "react": "^19.0.0",
@@ -23,6 +23,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.3.0",
+    "react-toastify": "^11.0.5",
     "recharts": "^2.15.1",
     "vite": "^6.2.2"
   },
