Dispute handling, payment integration done

--- a/Backend/.env
+++ b/Backend/.env
@@ -1,3 +1,5 @@
 MONGO_URI=mongodb+srv://onkar:onkar@cluster0.yir46.mongodb.net/freelaceing-webapp 
 JWT_SECRET=YourSecreteKey
 PORT = 8000
+RAZORPAY_KEY_ID=rzp_test_i8TGu3NXdRgm46
+RAZORPAY_SECRET=oAdwiaczhXeQ8GtjB03LH38a
