--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,4 @@
-REACT_APP_API_BASE_URL=http://localhost:5174
+
 API_BASE_URL=http://localhost:5174
+VITE_API_URL=http://localhost:8000/api
+VITE_RAZORPAY_KEY_ID=rzp_test_i8TGu3NXdRgm46
