--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,11 +16,13 @@
     "date-picker": "^0.5.0",
     "framer-motion": "^12.7.3",
     "lucide-react": "^0.482.0",
+    "moment": "^2.30.1",
     "multer": "^1.4.5-lts.2",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-datepicker": "^8.2.1",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.3.0",
     "react-toastify": "^11.0.5",
